fix alignment

--- a/css/style.css
+++ b/css/style.css
@@ -144,7 +144,7 @@ img {
     border-radius: 25px;
 }
 
-#credits, #about {
+#about {
     background-color: #EEE4D7;
     padding: 10px;
     border-radius: 25px;
